--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -54,3 +54,7 @@ body{
     box-shadow: 0 3px #666;
     transform: translateY(4px);
 }
+.authorName{
+    color: lightsteelblue;
+    font-size: 20px;
+}
