--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -3,16 +3,17 @@
     padding: 0;
 }
 body{
-    width: 600px;
+    width: 100%;
     height: 600px;
 }
 .main{
-    background: azure;
-    border: 2px solid #4CAF50;;
-    width: 100%;
-    height: 531px;
-    margin: 0 auto;
-    font-size: 20px;
+    height: 100%;
+    width: 50%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
 }
 .main input{
@@ -24,14 +25,22 @@ body{
     font-size: 11px;
     background: #FFF;
     height: 21px;
-    width: 592px;
+    width: 200px;
 }
 .element{
     text-align: center;
 }
 .main-window{
+    display: flex;
+    flex-direction: column;
+    background-color: #e2e2e2;
     height: 500px;
-    overflow: auto;
+    width: 200%;
+    padding: 20px;
+    overflow-y: scroll;
+
+
+
 }
 .sendbutton{
     display: inline-block;
@@ -56,5 +65,38 @@ body{
 }
 .authorName{
     color: lightsteelblue;
-    font-size: 20px;
+    font-size: 10px;
+}
+
+.message {
+    background-color: lightblue;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 18px;
+    margin: 5px;
+    /*max-width: 100px;*/
+}
+.message-wrap{
+    width: 200%;
+    display: flex;
+    margin: 10px 0 0 0;
+}
+.Layout{
+
+}
+.Layout-wrap{
+    display: flex;
+}
+.list-wrap{
+    margin: 2px 276px 11px 0;
+}
+.header-wrap{
+    display: flex;
+    margin: 20px 0px 20px 20px;
+}
+.logo{
+
+}
+.logo-header{
+    margin: 0 0 0 45px;
 }
