--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -3,10 +3,12 @@
     padding: 0;
 }
 body{
+    width: 100%;
     height: 600px;
 }
 .main{
     height: 100%;
+    width: 50%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -23,9 +25,8 @@ body{
     font-size: 11px;
     background: #FFF;
     height: 21px;
-    width: 100%;
+    width: 200px;
 }
-
 .element{
     text-align: center;
 }
@@ -34,11 +35,14 @@ body{
     flex-direction: column;
     background-color: #e2e2e2;
     height: 500px;
+    width: 200%;
     padding: 20px;
     overflow-y: scroll;
-}
 
-.sendButton{
+
+
+}
+.sendbutton{
     display: inline-block;
     padding: 5px 14px;
     font-size: 15px;
@@ -50,12 +54,13 @@ body{
     background-color: #4CAF50;
     border: none;
     border-radius: 15px;
-
+    box-shadow: 0 1px #999;
 }
-.sendButton:hover {background-color: #3e8e41}
+.sendbutton:hover {background-color: #3e8e41}
 
-.sendButton:active {
+.sendbutton:active {
     background-color: #3e8e41;
+    box-shadow: 0 3px #666;
     transform: translateY(4px);
 }
 .authorName{
@@ -72,6 +77,7 @@ body{
     /*max-width: 100px;*/
 }
 .message-wrap{
+    width: 200%;
     display: flex;
     margin: 10px 0 0 0;
 }
@@ -94,10 +100,3 @@ body{
 .logo-header{
     margin: 0 0 0 45px;
 }
-.form-wrap{
-    flex: 1;
-}
-.messages{
-    width: 100%;
-}
-
